--- a/demo/demoresponsive-1/demo.html
+++ b/demo/demoresponsive-1/demo.html
@@ -6,23 +6,25 @@
 </head>
 <body>
   <section id="content">
-    <ul id="data"></ul>
+    <ul id="data">
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+      <li><div>Data</div></li>
+    </ul>
   </section>
   <div id="errors"></div>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script>
-$(document).ready(function(){
-  $.ajax({
-    type:'GET',
-    dataType:'json',
-    url: 'http://www.pluralsight-training.net/odata/Courses',
-    timeout:15000,
-    success:function(data){
-      for (var i in data.d){
-        $("#courses").append('<li><div>' + data.d[i].Title +'</div></li>');
-      }
-    }
-}); 
-</script>
 </body>
 </html>
