--- a/app/app.html
+++ b/app/app.html
@@ -5,8 +5,49 @@
 	</head>
 
 	<body>
-		
+		<div id="content">
+			<h1>Pictures</h1>
+			<div id="pics">
+			</div>
+		</div>
 	</body>
 </html>
+<script>
+if(window.File && window.FileReader && window.FileList && window.Blob){
+	window.requestFileSystem(PERSISTENT, 5*1024*1024, initFS, errorHandler);
+} else {
+	alert("The File APIs are not fully supported in this browser");
+}
 
+function initFS(fs){
+  alert("in initFS");
+}
+ 
+function errorHandler(err){
+ var msg = 'An error occured: ';
+ 
+  switch (err.code) { 
+    case FileError.NOT_FOUND_ERR: 
+      msg += 'File or directory not found'; 
+      break;
+ 
+    case FileError.NOT_READABLE_ERR: 
+      msg += 'File or directory not readable'; 
+      break;
+ 
+    case FileError.PATH_EXISTS_ERR: 
+      msg += 'File or directory already exists'; 
+      break;
+ 
+    case FileError.TYPE_MISMATCH_ERR: 
+      msg += 'Invalid filetype'; 
+      break;
+ 
+    default:
+      msg += 'Unknown Error'; 
+      break;
+  };
+ console.log(msg);
+};
+</script>
 
