--- a/app/index.html
+++ b/app/index.html
@@ -10,17 +10,15 @@
 			<h1>Pictures</h1>
 			<div id="pics">
 				<ul>	
-					<li><div class="image"><a href="#!pic1.html"><img src="pics/pic1.jpg"/></a></div></li>
-					<li><div class="image"><a href="#!pic2.html"><img src="pics/pic2.jpg"/></a></div></li>
+					<li><div class="image"><img src="pics/pic1.jpg"/></div></li>
+					<li><div class="image"><img src="pics/pic2.jpg"/></div></li>
 					<li><div class="image"><img src="pics/pic3.jpg"/></div></li>
 					<li><div class="image"><img src="pics/pic4.jpg"/></div></li>
 					<li><div class="image"><img src="pics/pic5.jpg"/></div></li>
 				</ul>
 			</div>
 		</div>
-
-		<script>
-		
+		<script>	
 		</script>
 	</body>
 </html>
