req status ipv readyState

--- a/demo/demoresponsive_en_hashbang-2/index.html
+++ b/demo/demoresponsive_en_hashbang-2/index.html
@@ -9,9 +9,7 @@
   <a href="#!pagina1.html">Home</a>
   <a href="#!pagina2.html">Pagina 2</a>
   
-  <div id="content">
- 
-  </div>
+  <div id="content"></div>
 
   <div id="errors"></div>
 
@@ -28,8 +26,8 @@
 
             if(req.readyState === 4){
 
-              if(req.readyState === 200){
-                  var content = document.getElementById("content");
+              if(req.status === 200){
+                  var content = document.getElementById('content');
                   content.innerHTML = req.responseText;
 
               }
@@ -39,11 +37,10 @@
       req.send();
     }
     if(!window.location.hash){
-      //window.location.hash = '#!pagina1.html';
+      window.location.hash = '#!pagina1.html';
     }
 
 
   </script>
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 </body>
 </html>
