dialogs and some more

--- a/demo/demojquery/buttons.html
+++ b/demo/demojquery/buttons.html
@@ -10,7 +10,7 @@
 <body>
   <div id="content">
   	<h2> Knoppen </h2>
-  	<a href="#" data-role="button">Button</a>
+  	<a href="dialog.html" data-role="button" data-rel="dialog" data-transition="pop">Button</a>
   	<a href="#" data-role="button" data-icon="star" data-corners="false">Ster Knopje</a>
   	<a href="#" data-role="button" data-icon="check" data-shadow="false">Thema A Check</a>
 	<a href="#" data-role="button" data-mini="true">Thema B Mini</a>
