--- a/demo/demojquery/accordion.html
+++ b/demo/demojquery/accordion.html
@@ -8,20 +8,29 @@
 <title>Accordion</title>
 </head>
 <body>
-  <div id="content">
+    <div data-role="page" id="accordion" data-add-back-btn="true">
+    <div data-role="header">
+        <h1> Accordion </h1>
+    </div>
+  <div data-role="content">
     <div data-role="collapsible-set" data-theme="c" data-content-theme="d">
         <div data-role="collapsible">
-            <h3>Openklap</h3>
-            <p>Hey</p>
+            <h3>Sectie1</h3>
+            <p>Sectie 1 text</p>
         </div>
         <div data-role="collapsible">
-            <h3>Openklap</h3>
-            <p>Hey ho</p>
+            <h3>Sectie 2</h3>
+            <p>Sectie 2 text</p>
         </div>
         <div data-role="collapsible">
-            <h3>Openklap</h3>
-            <p>Hey HO HO</p>
+            <h3>Sectie 3</h3>
+            <p>Sectie 3 text</p>
         </div>
     </div>
+</div>
+    <div data-role="footer">
+        <h4>Accordion footer</h4>
+    </div>
+</div>
 </body>
 </html>
