--- a/demo/demojquery/buttons.html
+++ b/demo/demojquery/buttons.html
@@ -8,18 +8,17 @@
 </head>
 <body>
   
-  <div data-role="page" data-url="buttons.html">
+  <div data-role="page" id="buttons" data-add-back-btn="true">
     
     <div data-role="header">
-      <h1>JQuery</h1>
-      <a href="#!listview.html">Home</a>
+      <h1>Buttons</h1>
     </div>
     
     <div data-role="content" id="content"><h2> Knoppen </h2>
   	<a href="dialog.html" data-role="button" data-rel="dialog" data-transition="pop">Button</a>
-  	<a href="#" data-role="button" data-icon="star" data-corners="false">Ster Knopje</a>
-  	<a href="#" data-role="button" data-icon="check" data-shadow="false">Thema A Check</a>
-	<a href="#" data-role="button" data-mini="true">Thema B Mini</a>
+  	<a href="#" data-role="button" data-icon="star" data-corners="false">No Corners</a>
+  	<a href="#" data-role="button" data-icon="check" data-shadow="false">No shadow</a>
+	<a href="#" data-role="button" data-mini="true">Data-Mini</a>
 	<a href="#" data-role="button" data-icon="arrow-l" data-iconpos="left" data-inline="true">Left</a>
 	<a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" data-inline="true">Right</a>
 	<a href="#" data-role="button" data-icon="arrow-u" data-iconpos="top" data-inline="true">Top</a>
@@ -35,11 +34,11 @@
 	<h2> Controlgroup </h2>
 	<p> Vertical Controlgroup </p>
 	<div data-role="controlgroup" data-type="vertical">
-		<a href="#" data-role="button" data-theme="a" >Thema C</a>
-		<a href="#" data-role="button" data-theme="b" >Thema C</a>
+		<a href="#" data-role="button" data-theme="a" >Thema A</a>
+		<a href="#" data-role="button" data-theme="b" >Thema B</a>
 		<a href="#" data-role="button" data-theme="c" >Thema C</a>
-   		<a href="#" data-role="button" data-theme="d" >Mentions</a>
-   		<a href="#" data-role="button" data-theme="e" >Retweets</a>
+   		<a href="#" data-role="button" data-theme="d" >Thema D</a>
+   		<a href="#" data-role="button" data-theme="e" >Thema E</a>
 	</div>
 
 	<p>Horizontal Controlgroup</p>
