--- a/demo/demojquery/dialog.html
+++ b/demo/demojquery/dialog.html
@@ -8,14 +8,17 @@
 	<title>Buttons</title>
 </head>
 <body>
-	<div data-role="page" data-url="dialog.html">
-		<div data-role="header" data-id="foo1">
-			<h2> Console </h2>
-  		</div>
-  		<div data-role="content" class="ui-body">
-  			<p>test</p>
-  			<a href="#" data-role="button" data-rel="back" data-theme="b">Back</a>
-  		</div>
-	</div>
+<div data-role="page" id="dialog" data-add-back-btn=”true”>
+	<div data-role="header">
+<h1>Dialog</h1>
+</div>
+<div data-role="content">
+<h2>Click on close button to go back</h2>
+</div>
+<div data-role="footer">
+<h4>Dialog Footer</h4>
+</div>
+</div>
+
 </body>
 </html>
