--- a/demo/demojquery/selects.html
+++ b/demo/demojquery/selects.html
@@ -8,8 +8,11 @@
 	<title>Selects</title>
 </head>
 <body>
-  <div id="content">
-  	<h2>Normal</h2>
+	<div data-role="page" data-add-back-btn="true">
+	<div data-role="header">
+		<h1> Selects header </h1>
+	</div>
+  <div data-role="content" id="content">
   	<form>
 		<div data-role="fieldcontain">
 		    <label for="select-native-1">Basic:</label>
@@ -66,5 +69,7 @@
 	</fieldset>
 	</form>
   </div>
+  <div data-role="footer"><h4>Select Footer</h4></div>
+</div>
 </body>
 </html>
