--- a/demo/demojquery/navigation.html
+++ b/demo/demojquery/navigation.html
@@ -9,40 +9,53 @@
 </head>
 <body>
 
+<div data-role="page" id="navigation" data-add-back-btn="true">
 <div data-role="header" data-id="foo1" data-position="fixed">
-  <div data-role="navbar">
+  <h1>Navigation Bar</h1>
+  <p> Navigation Bar 3 elements</p>
+  <div data-role="navbar" data-theme="b">
+      <ul>
+          <li><a href="#" >One</a></li>
+          <li><a href="#" data-icon="gear" class="ui-btn-active">Settings</a></li>
+          <li><a href="#" data-icon="star">Favorites</a></li>
+      </ul>
+  </div><!-- /navbar -->
+<p> Navigation Bar 5 elements</p>
+    <div data-role="navbar">
       <ul>
           <li><a href="#" class="ui-btn-active">One</a></li>
           <li><a href="#" data-icon="gear">Settings</a></li>
           <li><a href="#" data-icon="star">Favorites</a></li>
+          <li><a href="#" data-icon="star">Favorites</a></li>
+          <li><a href="#" data-icon="star">Favorites</a></li>
       </ul>
   </div><!-- /navbar -->
-</div>
-
-  <div id="content">
-  	<h1>Navigation</h1>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dui ipsum, interdum et euismod quis, cursus at erat. Donec volutpat lacus at neque molestie in egestas mauris pharetra. Praesent id ligula at mauris tristique rhoncus. Nam lacus augue, rutrum eu congue a, lobortis mattis ligula. Etiam gravida, ante accumsan eleifend mattis, leo arcu elementum nunc, sed iaculis magna enim at sapien. Sed convallis ligula vel leo aliquam ultricies. Integer gravida consequat justo, sed euismod diam tempor at. Etiam congue pharetra purus, in pharetra nulla tincidunt eu. Etiam ullamcorper posuere augue at faucibus. Morbi vehicula mattis ullamcorper.
-
-      Morbi pulvinar nibh vel quam viverra varius. Nunc eget nisl erat. Nulla lorem turpis, rhoncus sed faucibus quis, condimentum luctus turpis. Maecenas facilisis, urna sodales condimentum iaculis, libero nisl tempor velit, sit amet ultricies nisi magna quis erat. Aliquam aliquet lorem eu arcu vestibulum non interdum risus facilisis. Cras pulvinar, leo vitae pharetra viverra, nisi urna vulputate dolor, sed mollis sapien leo quis orci. Quisque ut quam ut ligula scelerisque scelerisque viverra vitae justo. Quisque posuere felis quam, nec molestie lacus. Proin a interdum odio. Maecenas nec libero ipsum, tincidunt luctus nibh. Aenean ac nisi erat. Donec porta, nunc a pharetra mollis, augue enim commodo enim, sit amet sagittis nisi mauris quis lacus. Nulla condimentum elit nec neque sagittis congue.
-
-      Pellentesque ac lorem eros, quis molestie massa. Nullam vel justo lacus, eu accumsan risus. Ut id sem quam. Maecenas volutpat, nunc at tempor vestibulum, diam urna porttitor purus, a vulputate orci ipsum ut sapien. Praesent porta eros nec nisl posuere vulputate. Nullam iaculis consectetur velit vitae rutrum. Nulla sollicitudin consequat posuere. Ut eu lectus leo. Pellentesque ut metus quis diam suscipit facilisis at quis turpis. Nullam in elit ut ante ultricies volutpat.</p>
-   	</div>
-   	<div data-role="footer">
-   		<div data-role="navbar" data-iconpos="bottom">
+<p> Navigation Bar 10 elements</p>
+  <div data-role="navbar" data-iconpos="bottom">
     <ul>
-        <li><a href="#" class="ui-btn-active">One</a></li>
+        <li><a href="#" >One</a></li>
         <li><a href="#" data-icon="grid">Two</a></li>
         <li><a href="#" data-icon="star">Three</a></li>
         <li><a href="#" data-icon="gear">Four</a></li>
         <li><a href="#">Five</a></li>
         <li><a href="#">Six</a></li>
         <li><a href="#">Seven</a></li>
-        <li><a href="#">Eight</a></li>
+        <li><a href="#" class="ui-btn-active">Eight</a></li>
         <li><a href="#">Nine</a></li>
         <li><a href="#">Ten</a></li>
     </ul>
 </div><!-- /navbar -->
-   	</div>
+</div>
 
+  <div id="content">
+  	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+
+Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</p>
+
+   	</div>
+   	<div data-role="footer">
+   		<h4>Navigation Bar Footer</h4>
+   	</div>
+</div>
 </body>
 </html>
