--- a/demo/PhoneGap_Demo's/PhoneGap_Geolocation/index.html
+++ b/demo/PhoneGap_Demo's/PhoneGap_Geolocation/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Device Properties Example</title>
+    <title>GeoLocation Test</title>
+
+    <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.3.1.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.mobile-1.3.1.js"></script>
 
     <script src="phonegap.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -31,7 +35,29 @@
 
     </script>
   </head>
+
+
   <body>
-    <p id="geolocation">Finding geolocation...</p>
+
+<div data-role="page" id="page1">
+    <div data-theme="a" data-role="header">
+        <h3>
+            Geolocation Test
+        </h3>
+    </div>
+    <div data-role="content">
+            <p id="geolocation">Finding geolocation...</p>
+    </div>
+    <div data-theme="a" data-role="footer">
+        <h3>
+            2013 KHLeuven
+        </h3>
+    </div>
+</div>
+
+
+
+
+    
   </body>
 </html>
